- Move developer comments back to metadata - Add Request context/Report issue options - Move comment form under comment list - Increase Comment form height - Make profile icon squared - Add hardcoded Pinned comment: in metadata, and mark in comments list - Unhide delete comment icons - Rename metadata "Context" to "Key" - Align string list icons with search field

--- a/pontoon/base/static/css/style.css
+++ b/pontoon/base/static/css/style.css
@@ -605,7 +605,7 @@ tfoot td a {
 }
 
 img.rounded {
-  border-radius: 100%;
+  border-radius: 6px;
   border: 2px solid #4D5967;
 }
 
@@ -915,6 +915,7 @@ header .right .select .menu {
 #profile .button img,
 #profile .button .menu-icon {
   margin: 6px 0 6px 5px;
+  border-radius: 6px;
 }
 
 #profile .button img {
@@ -924,7 +925,7 @@ header .right .select .menu {
 
 #profile .button .menu-icon {
   border: 2px solid #4D5967;
-  border-radius: 100%;
+  border-radius: 6px;
   float: right;
   font-size: 20px;
   height: 20px;
